--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,12 +1,70 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtx4Jj6jXIVnC0ckT97ZqoJnJo9fd0tbQ&amp;sensor=false"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAidpFtwKiSGF2S2NsQvXR2g4kRaIfaciQ"></script>
+        <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+
+
+        <style type="text/css">
+            body{
+                margin: 0px;
+                padding: 0px;
+                background: gray;
+            }
+            .menu{
+                padding-top: 1%;
+                width: 15%;
+                height: 800px;
+                float: left;
+                border: 1px solid white;
+            }
+
+            .conteudo{
+                width: 84%;
+                height: 800px;
+                float: right;
+                border: 1px solid white;
+            }
+        </style>
+
     </h:head>
     <h:body>
-        Hello from Facelets
+
+        <div class="menu">
+            <h:form>
+                <h:commandLink value="eventoView" action="eventoView.xhtml?faces-redirect=ture"/>
+                <br></br>
+                <h:commandLink value="makerAdd" action="markerAdd.xhtml?faces-redirect=ture"/>
+
+                <br></br>
+                <h:commandLink value="maker" action="marker.xhtml?faces-redirect=ture"/>
+
+                <br></br>
+                <h:commandLink value="geocode" action="geocode.xhtml?faces-redirect=ture"/>
+
+                <br></br>
+                <h:commandLink value="polygon" action="polygon.xhtml?faces-redirect=ture"/>
+            </h:form> 
+        </div>
+
+        <div class="conteudo">
+            <ui:insert name="conteudo"/>
+        </div>
+
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtx4Jj6jXIVnC0ckT97ZqoJnJo9fd0tbQ&amp;sensor=false"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAidpFtwKiSGF2S2NsQvXR2g4kRaIfaciQ"></script>
+        <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+
     </h:body>
 </html>
 
